# geosensor-radar-viewer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/samples/: measurements.csv
docs/: architecture.md
include/geosensor/coordinates/: CoordinateTransform.h
include/geosensor/data/: SensorMeasurement.h  SensorOrigin.h  TargetPosition.h
include/geosensor/io/: CsvMeasurementLoader.h  UdpMeasurementParser.h
include/geosensor/networking/: UdpMeasurementReceiver.h
include/geosensor/storage/: MeasurementDatabase.h
include/geosensor/tracking/: TrackStore.h
include/geosensor/ui/: MainWindow.h  RadarView.h
scripts/dev/: create_project_structure.sh
scripts/simulator/: udp_sensor_simulator.py
src/: main.cpp
src/coordinates/: CoordinateTransform.cpp
src/io/: CsvMeasurementLoader.cpp  UdpMeasurementParser.cpp
src/networking/: UdpMeasurementReceiver.cpp
src/storage/: MeasurementDatabase.cpp
src/tracking/: TrackStore.cpp
src/ui/: MainWindow.cpp  RadarView.cpp
tests/coordinates/: coordinate_transform_tests.cpp
tests/io/: csv_measurement_loader_tests.cpp  udp_measurement_parser_tests.cpp
tests/storage/: measurement_database_tests.cpp
tests/tracking/: track_store_tests.cpp
